--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,4 @@
-// @import 'reset';
+@import 'reset';
 
 html, body {
     font-family: 'Noto Sans TC', sans-serif;
@@ -6,6 +6,7 @@ html, body {
     margin: 0;
     padding: 0;
     color: #F0F0F0;
+    line-height: normal;
     
     // 定義滾動條樣式
     &::-webkit-scrollbar {
@@ -37,6 +38,7 @@ html, body {
     
         h1 {
             font-size: 48px;
+            font-weight: 700;
             margin: 0;
         }
     }
@@ -55,11 +57,14 @@ html, body {
     
         h2{
             margin: 0 0 25px 0;
+            font-size: 24px;
+            font-weight: 700;
         }
     
         .IP {
             display: inline-block;
             font-size: 32px;
+            font-weight: 700;
             color: #00FF88;
             margin: 0;
             position: relative;
@@ -99,7 +104,7 @@ html, body {
                 border: none;
                 border-radius: 10px;
                 cursor: pointer;
-                transition: background-color 0.3s ease;
+                transition: background-color 0.3s ease, transform 0.1s ease, box-shadow 0.1s ease;
                 box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
                 letter-spacing: 3px;
                 font-weight: bold;
@@ -136,8 +141,23 @@ html, body {
                     //     background: #FFF;
                     // }
                 }
+                &:active {
+                    transform: scale(0.96); // 按下時按鈕稍微縮小
+                    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.5); // 加強陰影
+                }
+                
             }
-        
+
+            @media (max-width: 767px) {
+                flex-direction: column;
+            }
+        }
+        @media (max-width: 767px) {
+            padding: 20px;
+        }
+        @media (max-width: 414px) {
+            padding-left: 0px;
+            padding-right: 0px;
         }
     }
 
@@ -169,25 +189,6 @@ html, body {
         }
         p {
             margin: 0;
-        }
-    }
-
-}
-
-@media (max-width: 767px) {
-    .header h1 {
-        font-size: 36px;
-    }
-    .container {
-        padding: 20px;
-        h2 {
-            font-size: 28px;
-        }
-    }
-    .btn-group {
-        flex-direction: column;
-        .btn {
-            margin: 10px 0;
         }
     }
 
